--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -268,6 +268,11 @@ header {
 	border: 1px solid transparent;
 	border-radius: 4px;
 }
+[disabled]{
+    cursor: not-allowed;
+    filter: alpha(opacity=65);
+    opacity: .65;
+}
 .pull-left {
 	float: left;
 }
